// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UploadZone component snapshots > default state 1`] = `
"<div data-v-8bb889dd="" class="upload-zone">
  <div data-v-8bb889dd="" class="upload-zone__content"><span data-v-8bb889dd="" class="icon icon--xl icon-upload upload-zone__icon"></span>
    <p data-v-8bb889dd="" class="upload-zone__title">Drag &amp; drop a <code data-v-8bb889dd="">.cast</code> file here</p>
    <p data-v-8bb889dd="" class="upload-zone__subtitle">or</p><label data-v-8bb889dd="" class="btn btn--primary upload-zone__browse"> Browse files <input data-v-8bb889dd="" type="file" accept=".cast" class="upload-zone__input"></label>
  </div>
  <!--v-if-->
</div>"
`;

exports[`UploadZone component snapshots > dragging state 1`] = `
"<div data-v-8bb889dd="" class="upload-zone upload-zone--drag-over">
  <div data-v-8bb889dd="" class="upload-zone__content"><span data-v-8bb889dd="" class="icon icon--xl icon-upload upload-zone__icon"></span>
    <p data-v-8bb889dd="" class="upload-zone__title">Drag &amp; drop a <code data-v-8bb889dd="">.cast</code> file here</p>
    <p data-v-8bb889dd="" class="upload-zone__subtitle">or</p><label data-v-8bb889dd="" class="btn btn--primary upload-zone__browse"> Browse files <input data-v-8bb889dd="" type="file" accept=".cast" class="upload-zone__input"></label>
  </div>
  <!--v-if-->
</div>"
`;

exports[`UploadZone component snapshots > error state 1`] = `
"<div data-v-8bb889dd="" class="upload-zone">
  <div data-v-8bb889dd="" class="upload-zone__content"><span data-v-8bb889dd="" class="icon icon--xl icon-upload upload-zone__icon"></span>
    <p data-v-8bb889dd="" class="upload-zone__title">Drag &amp; drop a <code data-v-8bb889dd="">.cast</code> file here</p>
    <p data-v-8bb889dd="" class="upload-zone__subtitle">or</p><label data-v-8bb889dd="" class="btn btn--primary upload-zone__browse"> Browse files <input data-v-8bb889dd="" type="file" accept=".cast" class="upload-zone__input"></label>
  </div>
  <div data-v-8bb889dd="" class="upload-zone__error-bar"><span data-v-8bb889dd="">Only .cast files are supported</span><button data-v-8bb889dd="" class="upload-zone__error-dismiss"><span data-v-8bb889dd="" class="icon icon--sm icon-close"></span></button></div>
</div>"
`;

exports[`UploadZone component snapshots > uploading state 1`] = `
"<div data-v-8bb889dd="" class="upload-zone upload-zone--uploading">
  <div data-v-8bb889dd="" class="upload-zone__content">
    <div data-v-8bb889dd="" class="upload-zone__spinner-text"><span data-v-8bb889dd="" class="spinner"></span> Uploading... </div>
  </div>
  <!--v-if-->
</div>"
`;
